@@ -34,6 +34,7 @@ ASAP includes the following programs:
 - plugin for http://www.un4seen.com/xmplay.html[XMPlay] {asapwin=}
 - add-on for http://www.un4seen.com/bass.html[BASS] (for http://www.aimp.ru/[AIMP] and http://www.un4seen.com/bass_showcase.php[other players]) {asapwin=}
 - POKEY sound emulation DLL for http://raster.infos.cz/atari/rmt/rmt.htm[Raster Music Tracker] {asapwin=}
+- Windows Explorer extension - shows metadata {asapwin=}
 - Java version of ASAP2WAV - command-line converter to WAV files {asapjava=}
 - Java applet - for web pages {asapjava=}{asapwww?(see link:applet.html[online demo])}
 - Java midlet - for mobile devices {asapjava=}
